--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
     entrypoint: npm run start
     volumes:
       - ./express/app:/app
+  postgres:
+    image: postgres
+    container_name: ${APP_NAME}_postgres
+    restart: always
+    user: "1000"
+    ports: 
+      - "5442:5432"
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE}
