Step6: Database Tool - pgAdmin

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ APP_NAME=MyAPP
 DB_USERNAME=postgres
 DB_PASSWORD=1234
 DB_DATABASE=DemoDB
+
+PGADMIN_USERNAME=rayhuang@linkchain.tw
+PGADMIN_PASSWORD=pgadmin1234
