--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,21 @@ services:
     container_name: ${APP_NAME}_express
     ports: 
       - "3000:3000"
+    depends_on:
+      - postgres
     entrypoint: npm run start
     volumes:
       - ./express/app:/app
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE}
   postgres:
     image: postgres
     container_name: ${APP_NAME}_postgres
     restart: always
     user: "1000"
-    ports: 
-      - "5442:5432"
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
     environment:
