--- a/express/app/package.json
+++ b/express/app/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
       "express": "^4.19.2",
-      "nodemon": "^3.1.2"
+      "nodemon": "^3.1.2",
+      "pg": "^8.11.5",
+      "dotenv": "^16.4.5"
     }
 }
