--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
 
 services:
+
   express:
     build: ./express
     container_name: ${APP_NAME}_express
-    ports: 
+    ports:
       - "3000:3000"
     depends_on:
       - postgres
@@ -16,6 +17,9 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_DATABASE=${DB_DATABASE}
+    networks:
+      - app-network
+
   postgres:
     image: postgres
     container_name: ${APP_NAME}_postgres
@@ -27,6 +31,9 @@ services:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
+    networks:
+      - app-network
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: ${APP_NAME}_pgadmin
@@ -41,3 +48,9 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
