--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
     networks:
       - app-network
+    logging:
+      driver: none 
 
   pgadmin:
     image: dpage/pgadmin4
@@ -50,6 +52,8 @@ services:
       - postgres
     networks:
       - app-network
+    logging:
+      driver: none 
 
 networks:
   app-network:
