--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,22 @@ services:
     networks:
       - app-network
     logging:
-      driver: none 
+      driver: none
+
+  portainer:
+    image: portainer/portainer-ce:alpine
+    container_name: portainer
+    command: -H unix:///var/run/docker.sock
+    ports:
+      - "9000:9000"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./portainer:/data"
+    restart: always
+    networks:
+      - app-network
+    logging:
+      driver: none
 
 networks:
   app-network:
