--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     container_name: ${APP_NAME}_express
     ports:
       - "3000:3000"
+      - "9229:9229"
     depends_on:
       - postgres
-    entrypoint: npm run start
+    entrypoint: sh -c "npm install && npm run debug"
     volumes:
       - ./express/app:/app
     environment:
