--- a/express/app/package.json
+++ b/express/app/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "npm install && nodemon index.js"
+      "start": "nodemon index.js",
+      "debug": "nodemon --inspect=0.0.0.0:9229 index.js"
     },
     "keywords": [],
     "author": "",
